--- a/CSS file/search.css
+++ b/CSS file/search.css
@@ -31,8 +31,7 @@
     top: 7rem;
     left: 0;
     right: 0;
-    padding-top: 3rem;
-    padding-left: 10rem;
+    padding: 3rem 0rem 10rem 10rem;
     min-height: 40rem;
     height: initial;
     background-color: #000000;
